# PythonWEB_HW10

HW10/: pyproject.toml
HW10/hw10/: db.sqlite3
HW10/hw10/hw10/: settings.py
HW10/hw10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
HW10/hw10/quotes/migrations/: 0001_initial.py
HW10/hw10/quotes/static/quotes/: style.css
HW10/hw10/quotes/templates/quotes/: add_authors.html  add_quotes.html  add_tag.html  base.html  index.html
HW10/hw10/quotes/templatetags/: extract.py
HW10/hw10/users/: forms.py  urls.py  views.py
HW10/hw10/users/templates/users/: logout.html  signin.html  signup.html
HW10/hw10/utils/: add_quotes_to_mongo.py  authors.json  migration.py
hw11/: pyproject.toml
hw11/src/conf/: config.ini
hw11/src/database/: db.py
hw11/src/repository/: contacts.py
